manifests-failed/moon2-2.6.7.tgz-manifest.yaml
---
# Source: moon2/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moon
---
# Source: moon2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release
  namespace: moon2-2.6.7.tgz
spec:
  selector:
    app: my-release
  ports:
  - name: moon
    protocol: TCP
    port: 4444
  - name: moon-exp-ui
    protocol: TCP
    port: 9090
  - name: moon-ui
    protocol: TCP
    port: 8080
---
# Source: moon2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: my-release
  namespace: moon2-2.6.7.tgz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-release
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        app: my-release
    spec:
      serviceAccountName: my-release
      terminationGracePeriodSeconds: 360
      containers:
      - name: moon
        image: quay.io/aerokube/moon:2.6.7
        command:
        - /moon
        - -moon-url
        - http://my-release.moon2-2.6.7.tgz:4444/wd/hub
        resources:
          limits:
            cpu: "0.5"
            memory: "256Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        ports:
        - containerPort: 4444
      - name: moon-conf
        image: quay.io/aerokube/moon-conf:2.6.7
        resources:
          limits:
            cpu: "0.25"
            memory: "128Mi"
          requests:
            cpu: "0.05"
            memory: "128Mi"
      - name: moon-exp-ui
        image: quay.io/aerokube/moon-ui:2.6.7
        args:
        - -listen
        - :9090
        resources:
          limits:
            cpu: "0.25"
            memory: "64Mi"
          requests:
            cpu: "0.25"
            memory: "64Mi"
        ports:
        - containerPort: 9090
      - name: moon-ui
        image: quay.io/aerokube/moon-ui:2.0.7
        args:
          - -allowed-origin
          - "*"
        resources:
          limits:
            cpu: "0.25"
            memory: "64Mi"
          requests:
            cpu: "0.05"
            memory: "64Mi"
        ports:
        - containerPort: 8080
      volumes:
---
# Source: moon2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release
  namespace: moon2-2.6.7.tgz
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1900"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1900"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  ingressClassName: nginx
  rules:
  - host: moon.aerokube.local
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 9090
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 9090
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 8080
      - path: /wd/hub
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 4444
      - path: /cypress
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 4444
      - path: /playwright
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 4444
      - path: /devtools
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 4444
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: my-release
            port:
              number: 4444
